syntax = "proto3";

package login;

service LoginService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string accountType = 3;
}

message LoginResponse {
  string token = 1;
  string id = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  string accountType = 6;
  string error = 7;
}